[package]
name = "n2t-wasm"
version = "0.1.0"
authors = ["Abhay Nayar <abhaynayar@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#default = ["console_error_panic_hook, "optimize"]
optimize = ["log/release_max_level_warn"]

[dependencies]
wasm-bindgen = "0.2.63"
indoc = "1.0"
time = "*"

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

# Pixels Graphics
env_logger = "0.7.1"
log = "0.4.8"
pixels = "0.2.0"
winit = "0.22.0"
winit_input_helper = "0.6.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
debug = true

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
