[package]
name = "n2t-wasm"
version = "0.1.0"
authors = ["Abhay Nayar <abhaynayar@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
optimize = ["log/release_max_level_warn"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

wasm-bindgen = "0.2.63"
time = "*"
log = "0.4.8"

# Pixels Graphics
#env_logger = "0.7.1"
#pixels = "0.2.0"
#winit = "0.22.0"
#winit_input_helper = "0.6.0"

#[dependencies.web-sys]
#version = "0.3.4"
#features = [ 'Document', 'Element', 'HtmlElement', 'Node', 'Window', ]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
debug = true

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false
